# simple_game

./: CMakeLists.txt
include/: game_logic.h  simple_game.h
source/: game_logic.cpp  main.cpp  simple_game.cpp
